--- a/class-setup.yml
+++ b/class-setup.yml
@@ -338,31 +338,39 @@
         - name: Download Wallpaper
           ansible.builtin.get_url:
             url: https://wallpapers.com/images/hd/yellow-black-linux-penguin-logo-oow6y6sgknpmcdrz.jpg
-            dest: '/home/{{ username }}/.wallpapers'
+            dest: '/home/{{ username }}/.wallpapers/yellow-black.jpg'
             mode: '0660'
             owner: "{{ username }}"
             group: "{{ username }}"
 
         - name: Set TUX Wallpaper, Panel Applications, and Keybindings
-          ansible.builtin.command:
-            cmd: |
-              gsettings set org.gnome.desktop.background \
-                  picture-uri file:///~/.wallpapers/yellow-black-linux-penguin-logo-oow6y6sgknpmcdrz.jpg
-              gsettings set org.gnome.shell \
-                  favorite-apps "['org.mozilla.firefox.desktop','org.gnome.Nautilus.desktop','org.gnome.Software.desktop','Zoom.desktop','geany.desktop','terminator.desktop','code.desktop','ranger.desktop']"
-              # Terminator Custom Keybindings
-              gsettings set org.gnome.settings-daemon.plugins.media-keys \
-                  custom-keybindings "['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/']"
-              gsettings set \
-                org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ name 'Terminator'
-              gsettings set \
-                org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ command 'terminator'
-              gsettings set \
-                org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ binding '<Super>t'
-              gsettings set org.gnome.settings-daemon.plugins.media-keys home "[<Super>e]"
-              gsettings set org.gnome.settings-daemon.plugins.media-keys www "[<Super>w]"
-              gsettings set org.gnome.settings-daemon.plugins.media-keys control-center "[<Super>s]"
-              gsettings set org.gnome.settings-daemon.plugins.media-keys search "[<Super>f]"
+          become: true
+          become_user: "{{ username }}"
+          ansible.builtin.shell: > 
+            gsettings set org.gnome.desktop.background picture-uri file:///home/{{ username }}/.wallpapers/yellow-black.jpg
+            
+            gsettings set org.gnome.shell \
+              favorite-apps "['org.mozilla.firefox.desktop','org.gnome.Nautilus.desktop','org.gnome.Software.desktop','Zoom.desktop','geany.desktop','terminator.desktop','code.desktop','ranger.desktop']"
+            
+            gsettings set org.gnome.settings-daemon.plugins.media-keys \
+              custom-keybindings "['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/']"
+            
+            gsettings set \
+              org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ \
+              name 'Terminator'
+            
+            gsettings set \
+              org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ \
+              command 'terminator'
+            
+            gsettings set \
+              org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ \
+              binding '<Super>t'
+            
+            gsettings set org.gnome.settings-daemon.plugins.media-keys home "[<Super>e]"
+            gsettings set org.gnome.settings-daemon.plugins.media-keys www "[<Super>w]"
+            gsettings set org.gnome.settings-daemon.plugins.media-keys control-center "[<Super>s]"
+            gsettings set org.gnome.settings-daemon.plugins.media-keys search "[<Super>f]"
           environment:
             DBUS_SESSION_BUS_ADDRESS: "unix:path=/run/user/1000/bus"
           changed_when: false
