--- a/class-setup.yml
+++ b/class-setup.yml
@@ -343,36 +343,44 @@
             owner: "{{ username }}"
             group: "{{ username }}"
 
-        - name: Set TUX Wallpaper, Panel Applications, and Keybindings
+        - name: Set TUX Wallpaper
           become: true
           become_user: "{{ username }}"
-          ansible.builtin.shell: >
+          ansible.builtin.shell: |
             gsettings set org.gnome.desktop.background picture-uri file:///home/{{ username }}/.wallpapers/yellow-black.jpg
+          environment:
+            DBUS_SESSION_BUS_ADDRESS: "unix:path=/run/user/1000/bus"
+          changed_when: false
 
-            gsettings set org.gnome.shell \
-              favorite-apps \
-              "['org.mozilla.firefox.desktop','org.gnome.Nautilus.desktop','org.gnome.Software.desktop',\
-              'Zoom.desktop','geany.desktop','terminator.desktop','code.desktop','ranger.desktop']"
+        - name: Set Launcher Icons
+          become: true
+          become_user: "{{ username }}"
+          ansible.builtin.shell: |
+            gsettings set org.gnome.shell favorite-apps "['org.mozilla.firefox.desktop','org.gnome.Nautilus.desktop','org.gnome.Software.desktop','Zoom.desktop','geany.desktop','terminator.desktop','code.desktop','ranger.desktop']"
+          environment:
+            DBUS_SESSION_BUS_ADDRESS: "unix:path=/run/user/1000/bus"
+          changed_when: false
 
-            gsettings set org.gnome.settings-daemon.plugins.media-keys \
-              custom-keybindings "['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/']"
+        - name: Set Terminator custom-keybindings
+          become: true
+          become_user: "{{ username }}"
+          ansible.builtin.shell: |
+            gsettings set org.gnome.settings-daemon.plugins.media-keys custom-keybindings "['/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/']"
+            gsettings set org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ name 'Terminator'
+            gsettings set org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ command 'terminator'
+            gsettings set org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ binding '<Super>t'
+          environment:
+            DBUS_SESSION_BUS_ADDRESS: "unix:path=/run/user/1000/bus"
+          changed_when: false
 
-            gsettings set \
-              org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ \
-              name 'Terminator'
-
-            gsettings set \
-              org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ \
-              command 'terminator'
-
-            gsettings set \
-              org.gnome.settings-daemon.plugins.media-keys.custom-keybinding:/org/gnome/settings-daemon/plugins/media-keys/custom-keybindings/custom0/ \
-              binding '<Super>t'
-
-            gsettings set org.gnome.settings-daemon.plugins.media-keys home "[<Super>e]"
-            gsettings set org.gnome.settings-daemon.plugins.media-keys www "[<Super>w]"
-            gsettings set org.gnome.settings-daemon.plugins.media-keys control-center "[<Super>s]"
-            gsettings set org.gnome.settings-daemon.plugins.media-keys search "[<Super>f]"
+        - name: Set keybindings
+          become: true
+          become_user: "{{ username }}"
+          ansible.builtin.shell: |
+            gsettings set org.gnome.settings-daemon.plugins.media-keys home "<Super>e"
+            gsettings set org.gnome.settings-daemon.plugins.media-keys www "<Super>w"
+            gsettings set org.gnome.settings-daemon.plugins.media-keys control-center "<Super>s"
+            gsettings set org.gnome.settings-daemon.plugins.media-keys search "<Super>f"
           environment:
             DBUS_SESSION_BUS_ADDRESS: "unix:path=/run/user/1000/bus"
           changed_when: false
