--- a/class-setup.yml
+++ b/class-setup.yml
@@ -394,4 +394,4 @@
           ansible.builtin.dnf:
             name: '*'
             state: latest
-            only_upgrade: true
+            update_only: true
