--- a/class-setup.yml
+++ b/class-setup.yml
@@ -353,6 +353,23 @@
             DBUS_SESSION_BUS_ADDRESS: "unix:path=/run/user/1000/bus"
           changed_when: false
 
+        - name: Set terminator configuration folder
+          ansible.builtin.file:
+            path: /home/{{ username }}/.config/terminator
+            state: directory
+            mode: "0744"
+            owner: "{{ username }}"
+            group: "{{ username }}"
+          
+        - name: Download Terminator Configuration
+          ansible.builtin.get_url:
+            url: 
+            dest: '/home/{{ username }}/.config/terminator/config'
+            mode: '0644'
+            owner: "{{ username }}"
+            group: "{{ username }}"
+          
+
         - name: Set Launcher Icons
           become: true
           become_user: "{{ username }}"
