finals and init

--- a/class-setup.yml
+++ b/class-setup.yml
@@ -153,6 +153,7 @@
               - screen
               - bash-completion
               - libguestfs-bash-completion
+              - stress-ng
 
         - name: Multimedia Packages
           tags: multimedia_pkgs
