--- a/class-setup.yml
+++ b/class-setup.yml
@@ -74,7 +74,7 @@
       block:
 
         - name: Check if Zoom is already installed
-          ansible.builtin.command: rpm -q zoom
+          ansible.builtin.command: dnf info --installed zoom
           register: zoom_installed
           ignore_errors: true
           changed_when: false
@@ -224,6 +224,7 @@
             mode: "0700"
             owner: root
             group: root
+          no_log: true
           loop:
             - https://raw.githubusercontent.com/jmedinar/testchecker/refs/heads/main/finals/launcher
             - https://raw.githubusercontent.com/jmedinar/testchecker/refs/heads/main/finals/final
@@ -354,6 +355,11 @@
             - '/home/{{ username }}/.themes'
             - '/home/{{ username }}/.wallpapers'
 
+        - name: Verify if wallpaper already exists
+          ansible.buildin.stat:
+            path: /home/{{ username }}/.wallpapers/yellow-black.jpg
+          register: file_stat
+
         - name: Download Wallpaper
           ansible.builtin.get_url:
             url: https://wallpapers.com/images/hd/yellow-black-linux-penguin-logo-oow6y6sgknpmcdrz.jpg
@@ -361,6 +367,7 @@
             mode: '0660'
             owner: "{{ username }}"
             group: "{{ username }}"
+          when: not file_stat.stat.exists
 
         - name: Set TUX Wallpaper
           become: true
@@ -373,19 +380,21 @@
 
         - name: Set terminator configuration folder
           ansible.builtin.file:
-            path: /home/{{ username }}/.config/terminator
+            # path: /home/{{ username }}/.config/terminator
+            path: /etc/xdg/terminator
             state: directory
-            mode: "0744"
-            owner: "{{ username }}"
-            group: "{{ username }}"
+            mode: "0755"
+            # owner: "{{ username }}"
+            # group: "{{ username }}"
 
         - name: Download Terminator Configuration
           ansible.builtin.get_url:
             url: https://raw.githubusercontent.com/jmedinar/testchecker/refs/heads/main/config
-            dest: '/home/{{ username }}/.config/terminator/config'
+            # dest: '/home/{{ username }}/.config/terminator/config'
+            dest: /etc/xdg/terminator/config
             mode: '0644'
-            owner: "{{ username }}"
-            group: "{{ username }}"
+            # owner: "{{ username }}"
+            # group: "{{ username }}"
 
         - name: Set Launcher Icons
           become: true
