--- a/finals/testlauncher.yml
+++ b/finals/testlauncher.yml
@@ -17,7 +17,7 @@
 
     - name: Decrypt the script
       ansible.builtin.shell: |
-        ansible-vault decrypt --output /tmp/final /usr/bin/{{ version }}
+        ansible-vault decrypt --output /tmp/final /usr/bin/final
       args:
         executable: /bin/bash
       changed_when: false
