--- a/class-setup.yml
+++ b/class-setup.yml
@@ -124,11 +124,9 @@
               - terminator
 
         - name: Remove unnecessary packages
-          no_log: true
           ansible.builtin.dnf:
+            name: httpd
             state: removed
-            name:
-              - httpd
 
         - name: Development Packages
           tags: development_pkgs
