removed google chrome

--- a/class-setup.yml
+++ b/class-setup.yml
@@ -111,7 +111,7 @@
           - firefox
           - flatpak
           - gnome-tweaks
-          - google-chrome
+          # - google-chrome
           - vim
           - wget
           - fuse-sshfs
