--- a/class-setup.yml
+++ b/class-setup.yml
@@ -472,4 +472,5 @@
           ansible.builtin.dnf:
             name: '*'
             state: latest
+            security: true
             update_only: true
